@@ -30,9 +30,6 @@ SET(BUILD_TARGET_LIB_PATH "${BUILD_TARGET_EXE_PATH}/${MODULE_SUBFOLDER}")
 SET(BUILD_TARGET_INSTLIB_PATH "${BUILD_TARGET_EXE_PATH}/installer-dlls")
 SET(NSCP_PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR})
 
-IF(WIN32)
-    INCLUDE(${BUILD_CMAKE_FOLDER}/wix.cmake)
-ENDIF(WIN32)
 INCLUDE(${BUILD_CMAKE_FOLDER}/SetMultiThread.cmake)
 INCLUDE(${BUILD_CMAKE_FOLDER}/GoogleProtoBuf.cmake)
 INCLUDE(${BUILD_CMAKE_FOLDER}/functions.cmake)
