@@ -20,6 +20,7 @@ FIND_PACKAGE(GoogleBreakpad COMPONENTS common exception_handler crash_report_sen
 FIND_PACKAGE(OpenSSL)
 FIND_PACKAGE(Boost COMPONENTS system filesystem thread regex date_time program_options python)
 IF(WIN32)
+	INCLUDE(${BUILD_CMAKE_FOLDER}/wix.cmake)
 	FIND_PACKAGE(PSDK_61)
 	FIND_PACKAGE(PSDK_2003)
 ELSE(WIN32)
@@ -102,6 +103,11 @@ IF(WIN32)
 	ELSE(PSDK_61_FOUND)
 		MESSAGE(STATUS " ! plattform sdk(2003) not found: TODO=${PSDK_2003_INCLUDE_DIRS}")
 	ENDIF(PSDK_61_FOUND)
+	IF(WIX_FOUND)
+		MESSAGE(STATUS " - wix found in: ${WIX_ROOT_DIR}")
+	ELSE(WIX_FOUND)
+		MESSAGE(STATUS " ! wix not found: WIX_ROOT_DIR=${WIX_ROOT_DIR}")
+	ENDIF(WIX_FOUND)
 ENDIF(WIN32)
 IF(NOT WIN32)
 	IF(CMAKE_USE_PTHREADS_INIT)
