@@ -4,6 +4,9 @@ TODO:
  * Fix dependonservice LanManWorkStation (old win)
  * Fix RtlStringFromGUID problem on NT4
 
+2013-01-19 MickeM
+ * Fixed Wix 3.7 and added wix to dependencies
+
 2013-01-17 MickeM
  * Added nsclient-full.ini with "all" (non advanced) avalible options.
  * Fix for reloading settings from file from script: core:reload('settings') will not work.
